--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "highcharts-vue": "^2.0.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
+    "vue3-toastify": "^0.2.1",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
