--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@tiptap/vue-3": "^2.3.0",
     "axios": "^1.6.8",
     "highcharts-vue": "^2.0.1",
+    "luxon": "^3.4.4",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
     "vue3-toastify": "^0.2.1",
