--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "luxon": "^3.4.4",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
+    "vue-tippy": "^6.4.1",
     "vue3-toastify": "^0.2.1",
     "vuex": "^4.0.2"
   },
