Installing vue axios

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,11 @@
     "@tiptap/pm": "^2.3.0",
     "@tiptap/starter-kit": "^2.3.0",
     "@tiptap/vue-3": "^2.3.0",
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
     "highcharts-vue": "^2.0.1",
     "luxon": "^3.4.4",
     "vue": "^3.4.21",
+    "vue-axios": "^3.5.2",
     "vue-router": "^4.3.0",
     "vue-tippy": "^6.4.1",
     "vue3-toastify": "^0.2.1",
