Add libraries for text processing

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,9 @@
     "axios": "^1.7.2",
     "epic-spinners": "^2.0.0",
     "highcharts-vue": "^2.0.1",
+    "lodash": "^4.17.21",
     "luxon": "^3.4.4",
+    "speakingurl": "^14.0.1",
     "vue": "^3.4.21",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.3.0",
@@ -29,8 +31,10 @@
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.2",
+    "@types/lodash": "^4.17.7",
     "@types/luxon": "^3.4.2",
     "@types/node": "^20.11.25",
+    "@types/speakingurl": "^13.0.6",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/tsconfig": "^0.5.1",
     "npm-run-all2": "^6.1.2",
