--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -4,6 +4,9 @@
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "composite": true,
+    "strict": true,
+    "target": "ESNext",
+    "lib": ["ESNext", "DOM"],
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
 
     "baseUrl": ".",
