--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@tiptap/vue-3": "^2.3.0",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
+    "@vueuse/core": "^12.3.0",
     "axios": "^1.7.2",
     "epic-spinners": "^2.0.0",
     "highcharts-vue": "^2.0.1",
@@ -25,6 +26,7 @@
     "luxon": "^3.4.4",
     "pinia": "^2.2.2",
     "speakingurl": "^14.0.1",
+    "unhead": "^1.11.15",
     "vue": "^3.4.21",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.3.0",
