--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "vue-router": "^4.3.0",
     "vue-tippy": "^6.4.1",
     "vue3-toastify": "^0.2.1",
+    "vuetify": "^3.7.7",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
