--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/tsconfig": "^0.5.1",
     "npm-run-all2": "^6.1.2",
+    "prettier": "3.5.1",
     "sass": "^1.77.8",
     "typescript": "~5.4.0",
     "vite": "^5.1.5",
