--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@vueuse/core": "^12.3.0",
     "axios": "^1.7.2",
     "epic-spinners": "^2.0.0",
+    "flag-icons": "^7.3.2",
     "highcharts-vue": "^2.0.1",
     "lodash": "^4.17.21",
     "luxon": "^3.4.4",
