--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "luxon": "^3.4.4",
     "pinia": "^2.2.2",
     "speakingurl": "^14.0.1",
+    "ts-luxon": "^6.0.0",
     "unhead": "^1.11.15",
     "vue": "^3.4.21",
     "vue-axios": "^3.5.2",
