--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.0",
     "@tiptap/extension-character-count": "^2.4.0",
     "@tiptap/extension-placeholder": "^2.3.0",
     "@tiptap/pm": "^2.3.0",
@@ -27,6 +28,7 @@
     "luxon": "^3.4.4",
     "pinia": "^2.2.2",
     "speakingurl": "^14.0.1",
+    "tailwindcss": "^4.0.0",
     "ts-luxon": "^6.0.0",
     "unhead": "^1.11.15",
     "vue": "^3.4.21",
