--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "vite-plugin-vuetify": "^2.1.0",
     "vue": "^3.4.21",
     "vue-axios": "^3.5.2",
+    "vue-i18n": "^10.0.7",
     "vue-router": "^4.3.0",
     "vue-tippy": "^6.4.1",
     "vue3-toastify": "^0.2.1",
