--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "vue-i18n": "^10.0.7",
     "vue-router": "^4.3.0",
     "vue-tippy": "^6.4.1",
+    "vue3-google-login": "^2.0.33",
     "vue3-toastify": "^0.2.1",
     "vuetify": "^3.7.7"
   },
